# AlgorithmsPythonCpp

./: README.md
cpp/: 23matches.cpp  8.cpp  8queens.cpp  8queensLoop.cpp  CMakeLists.txt  animal.cpp  battleship.cpp  blackjack.cpp  bullcowComputer.cpp  bullcowHuman.cpp  dice.cpp  guessnumber.cpp  hammurabi.cpp  hexapawn.cpp  kalah.cpp  labyrinth.cpp  minichess.cpp  mugwump.cpp  queen.cpp  reversi.cpp  sendmoremoney.cpp  solitaire.cpp  tictactoe.cpp  tictactoe4.cpp
python/: 23matches.py  8.py  8queens.py  8queensLoop.py  animal.py  battleship.py  blackjack.py  bullcowComputer.py  bullcowHuman.py  dice.py  guessnumber.py  hammurabi.py  hexapawn.py  kalah.py  labyrinth.py  minichess.py  mugwump.py  queen.py  reversi.py  sendmoremoney.py  solitaire.py  tictactoe.py  tictactoe4.py
